# vibe-coder-framework

./: .gitignore  CLAUDE.md  Project-template.md  Projects.md  README.md  kickoff.skill  projectinit.skill  setproject.skill  spec-review.skill  todo.skill  wherearewe.skill
.claude/: settings.json
.claude/commands/: handoff.md  kickoff.md  listprojects.md  merge.md  notify.md  ovpn_certs.md  pickup.md  projectinit.md  sessions.md  setproject.md  spec-review.md  todo.md  usage.md
.codex/skills/kickoff/: SKILL.md
.codex/skills/projectinit/: SKILL.md
matrix/: .gitignore  pyproject.toml
matrix/docs/specs/: matrix-claude-comm-channel-spec.md  matrix-notification-mcp-spec.md
matrix/infra/: .env.example  api.Dockerfile  backup.sh  bridge-requirements.txt  bridge.Dockerfile  docker-compose.yml  mcp.Dockerfile  requirements.txt
matrix/src/matrix_api/: config.py  logging_config.py  main.py  models.py  ratelimit.py  templates.py
matrix/src/matrix_bridge/: claude_runner.py  config.py  db.py  dispatcher.py  logging_config.py  main.py  metrics.py  mgmt.py  models.py  projects.py  safety.py  server.py  skills.py  sync.py
matrix/src/matrix_bridge/commands/: __init__.py  continue_.py  handoff.py  help.py  login.py  ping.py  project.py  reauth.py  rooms.py  run.py  session.py  todo.py  transport.py  usage.py  wherearewe.py
matrix/src/matrix_common/: client.py  config.py  destinations.py  errors.py  messages.py  retry.py
matrix/src/matrix_mcp/: config.py  logging_config.py  schemas.py  server.py
scripts/: push-check.sh  session-sync.sh  sync.sh
(+3 files in other folders)
